# data-analisys-pandas-python-dio

analise-dados/: README.md  pyproject.toml
analise-dados/Notebooks/: Pandas_Aula6_Visualizacao.ipynb
