[tool.poetry]
name = "analise-dados"
version = "0.1.0"
description = ""
authors = ["diego medeiros <diego.medeiros@geowellex.com>"]
readme = "README.md"
packages = [{include = "analise_dados"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
